Fix header letter-spacing

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -10,7 +10,7 @@
   font-size: 14px;
   line-height: 1.64;
   text-align: center;
-  letter-spacing: 0.10998px;
+  letter-spacing: 0.11px;
   color: var(--secondary-font-color);
 
   background-color: var(--adv-section-bg-color);
@@ -52,7 +52,7 @@
 
   font-size: 18px;
   line-height: 1.39;
-  letter-spacing: 0.10998px;
+  letter-spacing: 0.11px;
   color: var(--main-font-color);
 }
 
